--- a/docs/icpm2025.md
+++ b/docs/icpm2025.md
@@ -4,7 +4,7 @@ layout: default
 nav_order: 3
 ---
 
-# Webel: Web Browsing Event Logger
+# ICPM 2025 Demo Track Proceedings
 [Download PDF](webel.pdf){: .btn .btn-primary .fs-5 .mb-4 .mb-md-0 .mr-2 }
 <embed src="webel.pdf" type="application/pdf" width="100%" style="aspect-ratio: 8.5/11; height: auto;" />
 
